完成第九周和第十周作业：集成Spring Security和Thymeleaf，实现登录注册功能，包含页面跳转和表单校验